hphp/test/slow/shapes/idx_arr_type_error.php.expectf
Fatal error: Uncaught exception 'RuntimeException' with message 'idx() expects parameter 1 to be array, null given' in %s/hphp/test/slow/shapes/idx_arr_type_error.php:5
Stack trace:
%A
